plugins {
    id 'org.beryx.runtime' version '1.12.0' apply false
}

apply plugin: 'eclipse'

wrapper {
    gradleVersion = '9.5'
    distributionType = Wrapper.DistributionType.BIN
}

tasks.withType(JavaCompile) {
    options.fork = true
}

subprojects {
    repositories {
        mavenCentral()
    }

    apply plugin: 'java'
    apply plugin: 'eclipse'

    if(rootProject.hasProperty("main")) {
        apply plugin: 'application'
        application {
            mainClass = rootProject.findProperty("main")
        }
    }

    java {
        sourceCompatibility = JavaVersion.VERSION_17
        targetCompatibility = JavaVersion.VERSION_17
    }

    dependencies {
        implementation 'com.fasterxml.jackson.core:jackson-databind:2.19.0'
        implementation 'gov.nist.math:jama:1.0.3'
        implementation 'org.apache.commons:commons-math3:3.6.1'
        implementation 'org.apache.commons:commons-lang3:3.20.0'
        // later versions of xchart (now up to v4) have API changes
        implementation 'org.knowm.xchart:xchart:3.6.6'
        implementation 'com.miglayout:miglayout-swing:11.4.3'
        implementation 'com.formdev:flatlaf:3.7.1'
        implementation 'io.github.classgraph:classgraph:4.8.184'

        implementation files("$rootProject.projectDir/libs/ptolemy.jar")

        testImplementation 'org.junit.jupiter:junit-jupiter:6.1.0'
        testImplementation 'org.junit.platform:junit-platform-launcher:6.1.0'
    }

    test {
        useJUnitPlatform()
        testLogging {
            events "skipped", "failed", "standardOut", "standardError"
            exceptionFormat "full"
        }
    }

    task allDeps(type: DependencyReportTask) {}
}

project(':etomica-core') {

    dependencies {
        implementation project(':etomica-graphics3D')
    }

    processResources.dependsOn ':setupPython'
    clean.dependsOn ':cleanPython'

    task getGitCommit(type: Exec) {
        commandLine 'git', 'rev-parse', '--short', 'HEAD'
        standardOutput = new ByteArrayOutputStream()

        doLast {
            project.ext.commit = standardOutput.toString().trim()
        }
    }

    task writeBuildProperties(type: WriteProperties) {
        dependsOn getGitCommit

        def resDir = sourceSets.main.output.resourcesDir
        destinationFile = file("$resDir/build.properties")

        doFirst {
            property 'date', LocalDateTime.now()
            property 'commit', project.ext.commit
        }
    }

    processResources.dependsOn writeBuildProperties
}

project(':etomica-apps') {

    dependencies {
        implementation project(':etomica-core')
        implementation project(':etomica-graph')
        implementation project(':etomica-graphics3D')
    }
}

project(':etomica-modules') {
    apply plugin: 'application'
    apply plugin: 'org.beryx.runtime'

    jar {
        manifest {
            attributes "Main-Class": "etomica.modules.ModuleLauncher"
        }
    }

    application {
        mainClass = 'etomica.modules.ModuleLauncher'
    }

    runtime {
        imageDir = file("$buildDir/etomica_modules")
        imageZip = file("$buildDir/etomica_modules.zip")
        modules = ['java.desktop', 'java.logging']
        options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']

        jpackage {
            skipInstaller = true
        }
    }

    task archiveModulesApp(type: Zip) {
        dependsOn ":etomica-modules:jpackage"
        if (org.gradle.nativeplatform.platform.internal.DefaultNativePlatform.currentOperatingSystem.isMacOsX()) {
            from "$buildDir/jpackage"
        } else {
            from "$buildDir/jpackage/etomica-modules"
        }

        archiveFileName = "etomica-modules.zip"
        destinationDirectory = file("$buildDir/dist")
    }

    dependencies {
        implementation project(':etomica-core')
        implementation project(':etomica-apps')
        implementation project(':etomica-graphics3D')
    }
}

project(':etomica-graph') {

    dependencies {
        implementation 'xml-apis:xml-apis-ext:1.3.04'
        implementation 'org.apache.xmlgraphics:batik-swing:1.7'
        implementation 'org.apache.xmlgraphics:fop:1.0'
    }
}

tasks.register('setupPython', Exec) {
    onlyIf {
        rootProject.hasProperty('buildPython')
    }
    workingDir = "${project.rootDir}"
    commandLine './setup_python.sh'
}

tasks.register('cleanPython', Delete) {
    delete "${project(":etomica-core").projectDir}/src/main/resources/virtualenv"
}

tasks.register('javadocAll', Javadoc) {
    options.noTimestamp = true
    failOnError = false

    source subprojects.collect {
        project -> project.sourceSets.main.allJava
    }

    classpath = files(subprojects.collect { project -> project.sourceSets.main.compileClasspath })

    destinationDir = new File(projectDir, 'docs/javadoc')
}